<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".FirstFragment">

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/red"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_update"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.938" />

    <Button
        android:id="@+id/button_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/red"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_add"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.938" />

    <TextView
        android:id="@+id/gpaTextView"
        android:layout_width="130dp"
        android:layout_height="33dp"
        android:gravity="center"
        android:text="GPA: 0.00"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.985" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="352dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray"
                android:gravity="center"
                android:text="@string/courseName"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray"
                android:gravity="center"
                android:text="@string/credits"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray"
                android:gravity="center"
                android:text="@string/grade"
                android:textColor="@color/black" />
        </TableRow>
    </TableLayout>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="352dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/gpaTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        tools:ignore="SpeakableTextPresentCheck">

        <TableLayout
            android:id="@+id/gpaTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>